wasm/amino_acid_to_group_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_u5iwxrgk/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/7082d5445dfbaf8d84dce72f327d28c8fa666c16.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/7082d5445dfbaf8d84dce72f327d28c8fa666c16.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/bfe49cd08f2e384be6a4abee9dc08a174a42caf9.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/bfe49cd08f2e384be6a4abee9dc08a174a42caf9.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/ffbfbf6ebc427a22c477c6b897bd6ac66022276b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/ffbfbf6ebc427a22c477c6b897bd6ac66022276b.json" for subsequent builds)
cache:INFO:  - ok
